# asic-rs

./: Cargo.toml  FORK.md  pyproject.toml
.github/workflows/: build-wheels-fork.yml  release.yml
asic-rs-core/src/config/: collector.rs  mod.rs  pools.rs  preset.rs  scaling.rs  temperature.rs  timezone.rs  tuning.rs
asic-rs-core/src/data/: board.rs  capabilities.rs  collector.rs  device.rs  firmware.rs  miner.rs  mod.rs
asic-rs-core/src/traits/: auth.rs  firmware.rs  miner.rs  model.rs
asic-rs-firmwares/antminer/src/: firmware.rs
asic-rs-firmwares/antminer/src/backends/v2020/: mod.rs  web.rs
asic-rs-firmwares/antminer/src/backends/v2023_07/: mod.rs  web.rs
asic-rs-firmwares/auradine/src/backends/v1/: mod.rs  web.rs
asic-rs-firmwares/avalonminer/src/backends/avalon_a/: mod.rs
asic-rs-firmwares/avalonminer/src/backends/avalon_q/: mod.rs
asic-rs-firmwares/bitaxe/src/backends/v2_0_0/: mod.rs
asic-rs-firmwares/bitaxe/src/backends/v2_9_0/: mod.rs
asic-rs-firmwares/braiins/src/: firmware.rs
asic-rs-firmwares/braiins/src/backends/: util.rs
asic-rs-firmwares/braiins/src/backends/v21_09/: graphql.rs  mod.rs  web.rs
asic-rs-firmwares/braiins/src/backends/v25_03/: mod.rs
asic-rs-firmwares/braiins/src/backends/v25_05/: mod.rs
asic-rs-firmwares/braiins/src/backends/v25_07/: mod.rs  web.rs
asic-rs-firmwares/braiins/src/backends/v26_04/: mod.rs  web.rs
asic-rs-firmwares/epic/src/backends/v1/: mod.rs  web.rs
asic-rs-firmwares/futurebit/src/backends/v2/: mod.rs  web.rs
asic-rs-firmwares/luxminer/src/backends/v1/: mod.rs
asic-rs-firmwares/marathon/src/backends/v1/: mod.rs  web.rs
asic-rs-firmwares/nerdaxe/src/backends/v1/: mod.rs
asic-rs-firmwares/proto/src/backends/v1/: mod.rs  web.rs
asic-rs-firmwares/sealminer/src/: firmware.rs
asic-rs-firmwares/sealminer/src/backends/v2025/: mod.rs  web.rs
asic-rs-firmwares/vnish/src/: firmware.rs
asic-rs-firmwares/vnish/src/backends/: mod.rs
asic-rs-firmwares/vnish/src/backends/v1_2_0/: mod.rs  web.rs
asic-rs-firmwares/vnish/src/backends/v1_3_0/: mod.rs  web.rs
asic-rs-firmwares/volcminer/: Cargo.toml
asic-rs-firmwares/volcminer/src/: firmware.rs  lib.rs
asic-rs-firmwares/volcminer/src/backends/: mod.rs
asic-rs-firmwares/volcminer/src/backends/v1/: config_form.rs  mod.rs  rpc.rs  status_parser.rs  tests.rs  web.rs
asic-rs-firmwares/whatsminer/src/backends/v1/: mod.rs
asic-rs-firmwares/whatsminer/src/backends/v2/: mod.rs  rpc.rs
asic-rs-firmwares/whatsminer/src/backends/v3/: mod.rs  rpc.rs
asic-rs-makes/antminer/src/: models.rs
asic-rs-makes/volcminer/: Cargo.toml
asic-rs-makes/volcminer/src/: hardware.rs  lib.rs  make.rs  models.rs
asic-rs-pydantic-macros/src/: lib.rs
asic-rs-pydantic-macros/tests/ui/pass/: pydantic_model.rs
asic-rs-pydantic/src/: lib.rs
docs/: supported-devices.md
meta/vnish/v1.3.4/: api-doc.json
python/pyasic_rs/: __init__.py  asic_rs.pyi  config.py  data.py
python/tests/: test_pydantic_interop.py
src/: factory.rs  lib.rs
src/python/: miner.rs  mod.rs
