[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
name = "pyasic_rs"
version = "0.7.1.2"
description = "Python bindings for asic-rs"
authors = [{ name = "Brett Rowan", email = "121075405+b-rowan@users.noreply.github.com" }]
repository = "https://github.com/256foundation/asic-rs"
homepage = "https://github.com/256foundation/asic-rs"
source = "https://github.com/256foundation/asic-rs"
documentation = "https://256foundation.github.io/asic-rs"
issues = "https://github.com/256foundation/asic-rs/issues"

license = "Apache-2.0"
readme = "docs-shared/guide.md"

requires-python = ">=3.11, <4.0"
dependencies = [
    "pydantic>=2"
]

keywords = [
    "python",
    "asic",
    "bitcoin",
    "whatsminer",
    "antminer",
    "braiins-os",
    "vnish",
    "luxos",
    "bitaxe"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
docs = [
    "zensical>=0.0.43",
]
test = [
    "pytest>=8",
]



[tool.maturin]
package-name = "pyasic_rs"
module-name = "pyasic_rs.asic_rs"
features = ["python"]
python-source = "python"

[tool.mypy]
files = ["python/pyasic_rs"]
mypy_path = ["python"]
explicit_package_bases = true
plugins = ["pydantic.mypy"]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "pyasic_rs.asic_rs"
disable_error_code = ["no-redef"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
