[package]
name = "asic-rs-firmwares-volcminer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VolcMiner firmware implementation for asic-rs"

[lints]
workspace = true

[dependencies]
asic-rs-core.workspace = true
asic-rs-makes-volcminer.workspace = true

anyhow.workspace = true
async-trait.workspace = true
diqwest.workspace = true
macaddr.workspace = true
measurements.workspace = true
once_cell.workspace = true
reqwest.workspace = true
semver.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

pyo3 = { workspace = true, optional = true }

[features]
python = ["dep:pyo3", "asic-rs-core/python"]
